--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@remix-run/node": "^2.4.1",
     "@remix-run/react": "^2.4.1",
     "@remix-run/serve": "^2.4.1",
+    "i": "^0.3.7",
     "isbot": "^3.6.8",
+    "npm": "^10.2.5",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.2.0",
+    "react-h5-audio-player": "^3.9.0",
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
