--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "^3.9.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.4.1",
